--- a/block-BNaacu/views/student.ejs
+++ b/block-BNaacu/views/student.ejs
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>Student Form</h1>
-    <form action="">
+    <form action="/student" method="POST">
         <input type="text", placeholder="Name">
         <input type="email", placeholder="Email">
         <input type="number", placeholder="Age">
-        <input type="submit">
+        <input type="submit", value="Add Student">
     </form>
 </body>
 </html>
