--- a/block-BNaada/demo/views/singleUser.ejs
+++ b/block-BNaada/demo/views/singleUser.ejs
@@ -14,6 +14,9 @@
             <h2><%= user.name %></h2>
             <h3><%= user.email %></h3>
             <p><%= user.age %></p>
+            <a href="/users">
+                <button class="btn-green">Back</button>
+            </a>
         </div>
     </div>
 </body>
